Fixed the issue with the space where a help position goes, but still need to fix the spacing on the last two brothers and optimze this page more for mobile

--- a/LambdaThetaPhiStandards.css
+++ b/LambdaThetaPhiStandards.css
@@ -88,3 +88,8 @@ html
 #contactContainer{
     padding: 25px;
 }
+.Position{
+    height: 14%;
+    width:100%;
+    padding-top: 0;
+}
